--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>T-Shirts</title>
-  <link rel="stylesheet" href="t-shirts.js">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -15,7 +14,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="text/babel" src="t-shirts.js"></script>
+  <script type="text/babel" src="t-shirt.js"></script>
 </body>
 
 </html>
